--- a/RememberMe/app/src/main/res/values/colors.xml
+++ b/RememberMe/app/src/main/res/values/colors.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/blue500</color>
+    <color name="colorPrimaryDark">@color/blue700</color>
+    <color name="colorAccent">@color/deepOrangeA400</color>
+
+    <color name="blue100">#BBDEFB</color>
+    <color name="blue500">#2196F3</color>
+    <color name="blue700">#1976D2</color>
+
+    <color name="deepOrange500">#FF5722</color>
+    <color name="deepOrangeA200">#FF6E40</color>
+    <color name="deepOrangeA400">#FF3D00</color>
+
+    <color name="lightGreenA200">#B2FF59</color>
+    <color name="greenA400">#00E676</color>
+
+    <!--<color name="primary_text">#212121</color>-->
+    <!--<color name="secondary_text">#727272</color>-->
+    <!--<color name="icons">#FFFFFF</color>-->
+    <!--<color name="divider">#B6B6B6</color>-->
+
 </resources>
