--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -1,17 +1,51 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.gmail.maloef.rememberme.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="2">
+
+        <TextView
+            android:text="@string/current_box"
+            android:layout_gravity="left"
+            style="@android:style/TextAppearance.Large"
+            />
+
+        <TextView
+            android:text="This should go to the right"
+            android:layout_gravity="left"
+            style="@android:style/TextAppearance.Medium"
+            />
+
+        <TextView
+            android:text="This should go line 2"
+            android:layout_gravity="left"
+            style="@android:style/TextAppearance.Medium"
+            />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+
+    </GridLayout>
+    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"/>
 
-</RelativeLayout>
+</LinearLayout>
