--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,37 +12,62 @@
     tools:context="com.gmail.maloef.rememberme.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <GridLayout
+    <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2">
+        app:columnCount="2">
 
         <TextView
+            app:layout_columnWeight="1"
+            app:layout_gravity="left"
             android:text="@string/current_box"
-            android:layout_gravity="left"
             style="@android:style/TextAppearance.Large"
-            />
-
-        <TextView
-            android:text="This should go to the right"
-            android:layout_gravity="left"
-            style="@android:style/TextAppearance.Medium"
-            />
-
-        <TextView
-            android:text="This should go line 2"
-            android:layout_gravity="left"
-            style="@android:style/TextAppearance.Medium"
+            app:layout_row="0"
+            app:layout_column="0"
             />
 
         <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/vocabularyBoxSpinner"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="0"
+            app:layout_column="1"
             />
 
+        <TextView
+            app:layout_columnWeight="1"
+            app:layout_gravity="right"
+            android:text="Hier is nix!"
+            app:layout_row="1"
+            app:layout_column="0"
+            />
 
-    </GridLayout>
+        <Button
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            android:gravity="center"
+            android:text="@string/rename_box"
+            app:layout_row="1"
+            app:layout_column="1"
+            />
+
+        <TextView
+            app:layout_columnWeight="1"
+            app:layout_gravity="left"
+            android:text="@string/foreign_language"
+            app:layout_row="2"
+            app:layout_column="0"
+            />
+
+        <Spinner
+            android:id="@+id/foreignLanguageSpinner"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="2"
+            app:layout_column="1"
+            />
+
+    </android.support.v7.widget.GridLayout>
     
     <TextView
         android:layout_width="wrap_content"
