--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -20,10 +20,10 @@
         <TextView
             app:layout_columnWeight="1"
             app:layout_gravity="left"
-            android:text="@string/current_box"
-            style="@android:style/TextAppearance.Large"
             app:layout_row="0"
             app:layout_column="0"
+            style="@android:style/TextAppearance.Large"
+            android:text="@string/current_box"
             />
 
         <Spinner
@@ -37,26 +37,27 @@
         <TextView
             app:layout_columnWeight="1"
             app:layout_gravity="right"
-            android:text="Hier is nix!"
             app:layout_row="1"
             app:layout_column="0"
+            android:text="Hier is nix!"
             />
 
         <Button
             app:layout_columnWeight="1"
             app:layout_gravity="fill_horizontal"
             android:gravity="center"
-            android:text="@string/rename_box"
             app:layout_row="1"
             app:layout_column="1"
+            android:text="@string/rename_box"
             />
 
         <TextView
             app:layout_columnWeight="1"
             app:layout_gravity="left"
-            android:text="@string/foreign_language"
             app:layout_row="2"
             app:layout_column="0"
+            style="@android:style/TextAppearance.Medium"
+            android:text="@string/foreign_language"
             />
 
         <Spinner
