--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -43,12 +43,14 @@
             />
 
         <Button
+            android:id="@+id/renameBoxButton"
             app:layout_columnWeight="1"
             app:layout_gravity="fill_horizontal"
             android:gravity="center"
             app:layout_row="1"
             app:layout_column="1"
             android:text="@string/rename_box"
+            android:onClick="renameBox"
             />
 
         <TextView
