--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -34,13 +34,13 @@
             app:layout_column="1"
             />
 
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="right"
-            app:layout_row="1"
-            app:layout_column="0"
-            android:text="Hier is nix!"
-            />
+        <!--<TextView-->
+            <!--app:layout_columnWeight="1"-->
+            <!--app:layout_gravity="right"-->
+            <!--app:layout_row="1"-->
+            <!--app:layout_column="0"-->
+            <!--android:text="Hier is nix!"-->
+            <!--/>-->
 
         <Button
             android:id="@+id/renameBoxButton"
@@ -50,7 +50,7 @@
             app:layout_row="1"
             app:layout_column="1"
             android:text="@string/rename_box"
-            android:onClick="renameBox"
+            android:onClick="showRenameBoxDialog"
             />
 
         <TextView
