--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -34,14 +34,6 @@
             app:layout_column="1"
             />
 
-        <!--<TextView-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="right"-->
-            <!--app:layout_row="1"-->
-            <!--app:layout_column="0"-->
-            <!--android:text="Hier is nix!"-->
-            <!--/>-->
-
         <Button
             android:id="@+id/renameBoxButton"
             app:layout_columnWeight="1"
@@ -105,10 +97,90 @@
             />
 
     </android.support.v7.widget.GridLayout>
-    
-    <TextView
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <android.support.v7.widget.GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:columnCount="3">
+
+        <TextView
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:layout_row="0"
+            app:layout_column="0"
+            style="@android:style/TextAppearance.Medium"
+            android:text="@string/compartment"
+            />
+
+        <TextView
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:layout_row="0"
+            app:layout_column="1"
+            style="@android:style/TextAppearance.Medium"
+            android:text="@string/words"
+            />
+
+        <TextView
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:layout_row="0"
+            app:layout_column="2"
+            style="@android:style/TextAppearance.Medium"
+            android:text="@string/not_repeated_since"
+            />
+
+        <TextView
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:layout_row="1"
+            app:layout_column="0"
+            style="@android:style/TextAppearance.Medium"
+            android:text="1"
+            />
+
+        <TextView
+            android:id="@+id/wordsCompartment1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:layout_row="1"
+            app:layout_column="1"
+            style="@android:style/TextAppearance.Medium"
+            />
+
+        <TextView
+            android:id="@+id/notRepeatedCompartment1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:layout_row="1"
+            app:layout_column="2"
+            style="@android:style/TextAppearance.Medium"
+            />
+
+    </android.support.v7.widget.GridLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"/>
+
+    <Button
+        android:id="@+id/memorizeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:layout_gravity="center"
+        android:text="@string/memorize_compartment_1"
+        android:onClick="memorizeWordsFromCompartment1"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"/>
 
 </LinearLayout>
