--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -1,186 +1,165 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.gmail.maloef.rememberme.MainActivityFragment"
-    tools:showIn="@layout/activity_main">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-    <android.support.v7.widget.GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:columnCount="2">
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="com.gmail.maloef.rememberme.MainActivityFragment"
+        tools:showIn="@layout/activity_main">
 
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="left"
-            app:layout_row="0"
-            app:layout_column="0"
-            style="@android:style/TextAppearance.Large"
-            android:text="@string/current_box"
-            />
+        <android.support.v7.widget.GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:columnCount="2">
 
-        <Spinner
-            android:id="@+id/vocabularyBoxSpinner"
-            app:layout_columnWeight="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="0"
-            app:layout_column="1"
-            />
+            <TextView
+                app:layout_columnWeight="1"
+                app:layout_gravity="left"
+                app:layout_row="0"
+                app:layout_column="0"
+                style="@android:style/TextAppearance.Large"
+                android:text="@string/current_box"
+                />
+
+            <Spinner
+                android:id="@+id/vocabularyBoxSpinner"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill_horizontal"
+                app:layout_row="0"
+                app:layout_column="1"
+                />
+
+            <Button
+                android:id="@+id/renameBoxButton"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill_horizontal"
+                android:gravity="center"
+                app:layout_row="1"
+                app:layout_column="1"
+                android:text="@string/rename_box"
+                android:onClick="showRenameBoxDialog"
+                />
+
+            <TextView
+                app:layout_columnWeight="1"
+                app:layout_gravity="left"
+                app:layout_row="2"
+                app:layout_column="0"
+                style="@android:style/TextAppearance.Medium"
+                android:text="@string/foreign_language"
+                />
+
+            <Spinner
+                android:id="@+id/foreignLanguageSpinner"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill_horizontal"
+                app:layout_row="2"
+                app:layout_column="1"
+                />
+
+            <TextView
+                app:layout_columnWeight="1"
+                app:layout_gravity="left"
+                app:layout_row="3"
+                app:layout_column="0"
+                style="@android:style/TextAppearance.Medium"
+                android:text="@string/native_language"
+                />
+
+            <Spinner
+                android:id="@+id/nativeLanguageSpinner"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill_horizontal"
+                app:layout_row="3"
+                app:layout_column="1"
+                />
+
+            <TextView
+                app:layout_columnWeight="1"
+                app:layout_gravity="left"
+                app:layout_row="4"
+                app:layout_column="0"
+                style="@android:style/TextAppearance.Medium"
+                android:text="@string/translation_direction"
+                />
+
+            <Spinner
+                android:id="@+id/translationDirectionSpinner"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill_horizontal"
+                app:layout_row="4"
+                app:layout_column="1"
+                />
+
+        </android.support.v7.widget.GridLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <!--<android.support.v7.widget.GridLayout-->
+            <!--android:id="@+id/vocabularyBoxOverviewTable"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:columnCount="3">-->
+
+        <TableLayout
+            android:id="@+id/vocabularyBoxOverviewTable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow>
+
+                <TextView
+                    style="@style/AppTheme.VocabularyBoxTableCell"
+                    android:text="@string/compartment"
+                    />
+
+                <TextView
+                    style="@style/AppTheme.VocabularyBoxTableCell"
+                    android:text="@string/words"
+                    />
+
+                <TextView
+                    style="@style/AppTheme.VocabularyBoxTableCell"
+                    android:text="@string/not_repeated_since"
+                    />
+
+            </TableRow>
+
+            <!-- content is added programmatically -->
+
+        </TableLayout>
+        <!--</android.support.v7.widget.GridLayout>-->
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"/>
 
         <Button
-            android:id="@+id/renameBoxButton"
-            app:layout_columnWeight="1"
-            app:layout_gravity="fill_horizontal"
-            android:gravity="center"
-            app:layout_row="1"
-            app:layout_column="1"
-            android:text="@string/rename_box"
-            android:onClick="showRenameBoxDialog"
+            android:id="@+id/memorizeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/memorize_compartment_1"
+            android:onClick="memorizeWordsFromCompartment1"
             />
 
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="left"
-            app:layout_row="2"
-            app:layout_column="0"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/foreign_language"
-            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"/>
 
-        <Spinner
-            android:id="@+id/foreignLanguageSpinner"
-            app:layout_columnWeight="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="2"
-            app:layout_column="1"
-            />
-
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="left"
-            app:layout_row="3"
-            app:layout_column="0"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/native_language"
-            />
-
-        <Spinner
-            android:id="@+id/nativeLanguageSpinner"
-            app:layout_columnWeight="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="3"
-            app:layout_column="1"
-            />
-
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="left"
-            app:layout_row="4"
-            app:layout_column="0"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/translation_direction"
-            />
-
-        <Spinner
-            android:id="@+id/translationDirectionSpinner"
-            app:layout_columnWeight="1"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="4"
-            app:layout_column="1"
-            />
-
-    </android.support.v7.widget.GridLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <android.support.v7.widget.GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:columnCount="3">
-
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="center"
-            app:layout_row="0"
-            app:layout_column="0"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/compartment"
-            />
-
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="center"
-            app:layout_row="0"
-            app:layout_column="1"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/words"
-            />
-
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="center"
-            app:layout_row="0"
-            app:layout_column="2"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/not_repeated_since"
-            />
-
-        <TextView
-            app:layout_columnWeight="1"
-            app:layout_gravity="center"
-            app:layout_row="1"
-            app:layout_column="0"
-            style="@android:style/TextAppearance.Medium"
-            android:text="1"
-            />
-
-        <TextView
-            android:id="@+id/wordsCompartment1"
-            app:layout_columnWeight="1"
-            app:layout_gravity="center"
-            app:layout_row="1"
-            app:layout_column="1"
-            style="@android:style/TextAppearance.Medium"
-            />
-
-        <TextView
-            android:id="@+id/notRepeatedCompartment1"
-            app:layout_columnWeight="1"
-            app:layout_gravity="center"
-            app:layout_row="1"
-            app:layout_column="2"
-            style="@android:style/TextAppearance.Medium"
-            />
-
-    </android.support.v7.widget.GridLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"/>
-
-    <Button
-        android:id="@+id/memorizeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/memorize_compartment_1"
-        android:onClick="memorizeWordsFromCompartment1"
-        />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"/>
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
