--- a/RememberMe/app/src/main/res/values/styles.xml
+++ b/RememberMe/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
     <!-- used in activity_main.xml to set up Toolbar -->
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.VocabularyBoxTableCell" parent="TextAppearance.AppCompat.Medium">
+        <item name="layout_columnWeight">1</item>
+        <item name="layout_gravity">center</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+    </style>
+
 </resources>
