--- a/RememberMe/app/src/main/res/values/styles.xml
+++ b/RememberMe/app/src/main/res/values/styles.xml
@@ -23,8 +23,9 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="AppTheme.VocabularyBoxTableCell" parent="TextAppearance.AppCompat.Medium">
-        <item name="layout_columnWeight">1</item>
-        <item name="layout_gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <!-- does not work from xml, does work from code -->
+        <!--<item name="android:gravity">center</item>-->
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
