--- a/RememberMe/app/src/main/res/layout/fragment_add_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_add_word.xml
@@ -46,40 +46,13 @@
 
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="280dp"
-            android:layout_height="160dp"
-            android:layout_margin="16dp"
-            android:layout_gravity="center"
-            app:cardCornerRadius="8dp">
-
-            <EditText
-                android:id="@+id/foreign_word_edittext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                />
-
+        <android.support.v7.widget.CardView style="@style/Flashcard">
+            <EditText android:id="@+id/foreign_word_edittext" style="@style/FlashcardText" />
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="280dp"
-            android:layout_height="200dp"
-            android:layout_margin="16dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            app:cardCornerRadius="8dp">
-
-            <EditText
-                android:id="@+id/native_word_edittext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                />
+        <android.support.v7.widget.CardView style="@style/Flashcard">
+            <EditText android:id="@+id/native_word_edittext" style="@style/FlashcardText" />
         </android.support.v7.widget.CardView>
+
     </LinearLayout>
 </ScrollView>
