--- a/RememberMe/app/src/main/res/values/styles.xml
+++ b/RememberMe/app/src/main/res/values/styles.xml
@@ -29,4 +29,20 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="Flashcard">
+        <item name="android:layout_width">280dp</item>
+        <item name="android:layout_height">200dp</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="cardCornerRadius">8dp</item>
+    </style>
+
+    <style name="FlashcardText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
