--- a/RememberMe/app/src/main/res/layout/activity_word.xml
+++ b/RememberMe/app/src/main/res/layout/activity_word.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <include layout="@layout/content_query_word" />
+        <include layout="@layout/content_word" />
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
