--- a/RememberMe/app/src/main/res/layout/content_word.xml
+++ b/RememberMe/app/src/main/res/layout/content_word.xml
@@ -2,8 +2,8 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/query_word_content"
+    android:id="@+id/word_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QueryWordActivity"
+    tools:context=".WordActivity"
     />
