--- a/RememberMe/app/src/main/res/layout/fragment_query_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_query_word.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView style="@style/Flashcard">
-            <TextView android:id="@+id/query_textview" style="@style/FlashcardText" android:text="Hello from query_word!"/>
+            <TextView android:id="@+id/query_textview" style="@style/FlashcardText" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView style="@style/Flashcard">
