query & show work, logic in activity - better in fragments?

--- a/RememberMe/app/src/main/res/values/styles.xml
+++ b/RememberMe/app/src/main/res/values/styles.xml
@@ -47,4 +47,9 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="FlashcardText.Edit">
+        <item name="android:imeOptions">actionDone</item>
+    </style>
+
+
 </resources>
