--- a/RememberMe/app/src/main/res/layout/fragment_query_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_query_word.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/query_word"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
     <LinearLayout
-        android:id="@+id/add_word_parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -17,7 +16,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView style="@style/Flashcard">
-            <EditText android:id="@+id/answer_edittext" style="@style/FlashcardText" />
+            <EditText android:id="@+id/answer_edittext" style="@style/FlashcardText.Edit" />
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
