--- a/RememberMe/app/src/main/res/layout/fragment_show_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_show_word.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/show_word"
+    android:id="@+id/show_word_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -18,6 +18,39 @@
         <android.support.v7.widget.CardView style="@style/Flashcard">
             <TextView android:id="@+id/answer_textview" style="@style/FlashcardText" />
         </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp">
+
+            <ImageView
+                android:id="@+id/result_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_check_48dp"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:id="@+id/words_left_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_gravity="center"/>
+
+            <ImageButton
+                android:id="@+id/nextWordButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_forward_48dp"
+                android:layout_gravity="right|center_vertical"
+                android:foregroundGravity="right"
+                android:onClick="showNextWord"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
