--- a/RememberMe/app/src/main/res/layout/fragment_show_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_show_word.xml
@@ -20,33 +20,34 @@
         </android.support.v7.widget.CardView>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp">
+            android:layout_marginRight="16dp"
+            android:layout_gravity="center"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/result_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_check_48dp"
-                android:layout_gravity="center_vertical"/>
+                android:src="@drawable/ic_check_36dp"
+                />
 
             <TextView
                 android:id="@+id/words_left_textview"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:layout_gravity="center"/>
+                android:gravity="center"
+                android:layout_weight="1"/>
 
             <ImageButton
                 android:id="@+id/nextWordButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_forward_48dp"
-                android:layout_gravity="right|center_vertical"
-                android:foregroundGravity="right"
+                android:src="@drawable/ic_chevron_right_36dp"
                 android:onClick="showNextWord"
                 />
 
