improve page counter for memorize

--- a/RememberMe/app/src/main/res/layout/fragment_show_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_show_word.xml
@@ -36,12 +36,12 @@
                 />
 
             <TextView
-                android:id="@+id/words_left_textview"
+                android:id="@+id/repeat_status_textview"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                style="@style/DefaultText"
+                />
 
             <ImageButton
                 android:id="@+id/nextWordButton"
