--- a/RememberMe/app/src/main/res/values/styles.xml
+++ b/RememberMe/app/src/main/res/values/styles.xml
@@ -24,8 +24,8 @@
 
     <style name="DefaultText" parent="TextAppearance.AppCompat.Medium">
         <item name="android:layout_gravity">center</item>
-        <!-- does not work from xml, does work from code -->
-        <!--<item name="android:gravity">center</item>-->
+        <!-- does not work from xml, does work from code (?) -->
+        <item name="android:gravity">center</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
