--- a/RememberMe/app/src/main/res/layout/dialog_language_settings.xml
+++ b/RememberMe/app/src/main/res/layout/dialog_language_settings.xml
@@ -6,15 +6,16 @@
     android:id="@+id/languageSettingsDialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:columnCount="2">
+    app:columnCount="2"
+    android:padding="8dp">
 
     <TextView
         app:layout_columnWeight="1"
         app:layout_gravity="left"
         app:layout_row="0"
         app:layout_column="0"
-        style="@android:style/TextAppearance.Medium"
         android:text="@string/foreign_language"
+        style="@style/LabelText"
         />
 
     <Spinner
@@ -30,8 +31,8 @@
         app:layout_gravity="left"
         app:layout_row="1"
         app:layout_column="0"
-        style="@android:style/TextAppearance.Medium"
         android:text="@string/native_language"
+        style="@style/LabelText"
         />
 
     <Spinner
