--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -29,7 +29,7 @@
                 app:layout_gravity="left"
                 app:layout_row="0"
                 app:layout_column="0"
-                style="@android:style/TextAppearance.Large"
+                style="@style/LabelText"
                 android:text="@string/current_box"
                 />
 
@@ -57,7 +57,7 @@
                 app:layout_gravity="left"
                 app:layout_row="2"
                 app:layout_column="0"
-                style="@android:style/TextAppearance.Medium"
+                style="@style/LabelText"
                 android:text="@string/foreign_language"
                 />
 
@@ -74,7 +74,7 @@
                 app:layout_gravity="left"
                 app:layout_row="3"
                 app:layout_column="0"
-                style="@android:style/TextAppearance.Medium"
+                style="@style/LabelText"
                 android:text="@string/native_language"
                 />
 
@@ -91,7 +91,7 @@
                 app:layout_gravity="left"
                 app:layout_row="4"
                 app:layout_column="0"
-                style="@android:style/TextAppearance.Medium"
+                style="@style/LabelText"
                 android:text="@string/translation_direction"
                 />
 
