--- a/RememberMe/app/src/main/res/values/styles.xml
+++ b/RememberMe/app/src/main/res/values/styles.xml
@@ -29,6 +29,10 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="LabelText">
+        <item name="android:textSize">@dimen/abc_text_size_menu_material</item>
+    </style>
+
     <style name="Flashcard">
         <item name="android:layout_width">280dp</item>
         <item name="android:layout_height">200dp</item>
