add add word menu item

--- a/RememberMe/app/src/main/res/menu/menu_main.xml
+++ b/RememberMe/app/src/main/res/menu/menu_main.xml
@@ -19,6 +19,11 @@
         />
 
     <item
+        android:id="@+id/action_add_word"
+        android:title="@string/add_word"
+        />
+
+    <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never" />
