--- a/RememberMe/app/src/main/res/layout/content_main.xml
+++ b/RememberMe/app/src/main/res/layout/content_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_main"
-    android:name="com.gmail.maloef.rememberme.MainActivityFragment"
+    android:name="com.gmail.maloef.rememberme.activity.main.MainActivityFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
